# proxy-based-small-inversions

./: INSTALL.md  Makefile  Makefile.rocq.local  README.md  _RocqProject  small-inversions.opam  smallinversion.opam
Examples/: Fin_t.v  Makefile  _RocqProject  even.v  examples_header.v  list_position.v  map3.v  matrices.v  next_color.v  patterns.v
SmallInversion/: ML_interface.v  MR_interface.v  data_extraction.v  deparameterisation.v  dependent.v  derecursivation.v  parameterisation.v  pattern_generation.v  proxy0.v  proxy_identity.v  small_inversion.v  specialisation.v  strategy_creation.v  strategy_debug.v  strategy_engine.v  typeclass.v
plugin/: META.small-inversion  g_plugin.mlg  main.ml  plugin.mlpack
utils/: TM_functions.v  TM_notations.v  data_structures.v  db_manipulation.v  dissection.v  error_monad.v  list_functions.v  map_constr_with_binders.v  term_functions.v  term_printer.v  utils.v
